--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 plugins {
+    id 'java'
+    id 'jacoco'
     id 'org.jetbrains.kotlin.jvm' version '1.7.10'
-    id 'application'
 }
 
 group = 'ru.netology'
@@ -12,11 +13,13 @@ repositories {
 
 dependencies {
     testImplementation 'org.jetbrains.kotlin:kotlin-test'
+    implementation 'org.jetbrains.kotlin:kotlin-stdlib'
+    testImplementation 'junit:junit:4.13.2'
 }
 
-test {
-    useJUnitPlatform()
-}
+//test {
+//    useJUnitPlatform()
+//}
 
 compileKotlin {
     kotlinOptions.jvmTarget = '1.8'
@@ -24,8 +27,4 @@ compileKotlin {
 
 compileTestKotlin {
     kotlinOptions.jvmTarget = '1.8'
-}
-
-application {
-    mainClassName = 'MainKt'
 }
